Fix Popover clipping.

--- a/src/panel/Index.scss
+++ b/src/panel/Index.scss
@@ -222,7 +222,3 @@ body {
 	height: 1px;
 	position: relative; // For handle.
 }
-
-.svListHeader {
-	position: relative;
-}
